<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#1B1B1B"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/elogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/e"
            android:textColor="#FFFFFF"
            android:textSize="120sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="72dp"
            android:layout_height="101dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/arrow"
            android:rotation="40"
            app:layout_constraintBottom_toBottomOf="@+id/elogo"
            app:layout_constraintStart_toEndOf="@+id/elogo"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:id="@+id/arrow2"
            android:layout_width="72dp"
            android:layout_height="101dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/arrow"
            android:rotation="-40"
            app:layout_constraintBottom_toBottomOf="@+id/elogo"
            app:layout_constraintEnd_toStartOf="@+id/elogo"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/text_to_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:maxLength="32"
            android:hint="@string/text"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/elogo" />

        <Button
            android:id="@+id/show_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#FFFFFF"
            android:text="@string/show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_to_display" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="32dp"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/bannerId"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_button"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
